# MonopolyBE

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.dev.yml  pyproject.toml
.github/workflows/: ci-cd.yml
deploy/: .env.example  Caddyfile  README.md  docker-compose.yml
docs/: constants.md  duel-mode-plan.md  frontend-auth-guide.md  game-protocol.md  ruleset.md  sessions-and-realtime.md  telegram-auth-guide.md
src/: main.py
src/api/: router.py
src/api/auth/: router.py
src/api/leaderboard/: router.py
src/api/sessions/: router.py
src/application/: dependencies.py
src/application/services/: game_scheduler.py  game_service.py  rating_service.py  session_service.py  user_service.py  (+1 more)
src/core/: config.py  constants.py  dependencies.py  exceptions.py  invite_code.py  logging.py  security.py
src/gateway/: backplane.py  backpressure.py  connection.py  dispatcher.py  manager.py  router.py
tests/: conftest.py
tests/application/: test_game_scheduler.py  test_rating_service.py
tests/auth/: test_refresh.py
tests/domain/: test_elo.py
tests/e2e/: test_game_auction_e2e.py  test_game_buy_e2e.py  test_game_realtime_e2e.py  test_sessions_realtime_e2e.py
tests/gateway/: conftest.py  game_helpers.py  test_animation_timeline.py  test_backplane_fanout.py  test_chat_handler.py  test_connection.py  test_game_fanout.py  test_game_handler.py  test_game_intents.py
tests/sessions/: conftest.py  test_session_mapper.py  test_session_service.py  test_session_updated.py  test_sessions_api.py  test_ws_disconnect_cleanup.py  test_ws_membership.py
(+76 files in other folders)
